# transformant

./: CMakeLists.txt  README.md  build.bat  build.sh  build32.bat
audio-unit/: CMakeLists.txt  Info.plist  audiounitconfig.h
mac/: Info.plist  PkgInfo
mac/audio-unit/: CMakeLists.txt  audiounitconfig.h
mac/audio-unit/resource/: Info.plist
resource/: plugin.rc  plugin.uidesc  transformant.rc  transformant.uidesc
resource/design/: plugin.psd
src/: audiobuffer.cpp  audiobuffer.h  bitcrusher.cpp  bitcrusher.h  calc.h  formantfilter.cpp  formantfilter.h  global.h  lfo.cpp  lfo.h  limiter.h  paramids.h  pluginprocess.cpp  pluginprocess.h  pluginprocess.tcc  process.cpp  process.h  process.tcc  snd.h  version.h  vst.cpp  vst.h  vstentry.cpp  vstentry_vst2.cpp  waveshaper.cpp  waveshaper.h
src/ui/: controller.cpp  controller.h  uimessagecontroller.h
